# stanhue

./: README.md  pyproject.toml  scatter_colormap.R  scatter_colormap.py
.claude-plugin/: plugin.json
skills/stanhue/: SKILL.md
skills/stanhue/scripts/: scatter_colormap.py
